--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <!-- <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" /> -->
   </ItemGroup>
 
 </Project>
